documents/examples/bad/function_type_c.latf
int g(int x, int y) {
    return x + y;
}

int main() {
    [(int) -> int] f = lambda (int x) -> int . x;
    f = g; // error

    return 0;
}